NetBSD Problem Report #55752

From gson@gson.org  Sun Oct 25 17:41:16 2020
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 6C9101A9239
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 25 Oct 2020 17:41:16 +0000 (UTC)
Message-Id: <20201025174109.81784253EDC@guava.gson.org>
Date: Sun, 25 Oct 2020 19:41:09 +0200 (EET)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: sparc install fails with sysinst assertion failure
X-Send-Pr-Version: 3.95

>Number:         55752
>Category:       install
>Synopsis:       sparc install fails with sysinst assertion failure
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Oct 25 17:45:00 +0000 2020
>Closed-Date:    Tue Oct 27 11:20:13 +0000 2020
>Last-Modified:  Thu Nov 05 08:15:01 +0000 2020
>Originator:     Andreas Gustafsson
>Release:        NetBSD-current, source date >= 2020.10.24.15.16.39
>Organization:
>Environment:
System: NetBSD
Architecture: sparc
Machine: sparc
>Description:

On the TNF sparc testbed, installation is currently failing with:

  assertion "e == n" failed: file "/tmp/build/2020.10.24.16.13.15-sparc/src/usr.sbin/sysinst/arch/sparc/../../util.c", line 528, function "get_available_cds"
  [1]   Abort trap (core dumped) /sysinst

The problem started with this commit:

  2020.10.24.16.13.15 martin src/usr.sbin/sysinst/menus.mi 1.22
  2020.10.24.16.13.15 martin src/usr.sbin/sysinst/msg.mi.de 1.25
  2020.10.24.16.13.15 martin src/usr.sbin/sysinst/msg.mi.en 1.33
  2020.10.24.16.13.15 martin src/usr.sbin/sysinst/msg.mi.es 1.27
  2020.10.24.16.13.15 martin src/usr.sbin/sysinst/msg.mi.fr 1.32
  2020.10.24.16.13.15 martin src/usr.sbin/sysinst/msg.mi.pl 1.33
  2020.10.24.16.13.15 martin src/usr.sbin/sysinst/util.c 1.49

Logs:

  http://releng.netbsd.org/b5reports/sparc/commits-2020.10.html#2020.10.24.16.13.15

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: install-manager->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Sun, 25 Oct 2020 18:49:10 +0000
Responsible-Changed-Why:
My bug


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55752 CVS commit: src/usr.sbin/sysinst
Date: Mon, 26 Oct 2020 20:18:34 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Mon Oct 26 20:18:33 UTC 2020

 Modified Files:
 	src/usr.sbin/sysinst: util.c

 Log Message:
 PR 55752: relax an assertion, the first getvfsstat() call may overestimate
 the file systems visible to us.


 To generate a diff of this commit:
 cvs rdiff -u -r1.50 -r1.51 src/usr.sbin/sysinst/util.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: gson@NetBSD.org
State-Changed-When: Tue, 27 Oct 2020 11:20:13 +0000
State-Changed-Why:
Install succeeds since src/usr.sbin/sysinst/util.c 1.51, thanks.


From: "Stephen Borrill" <sborrill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55752 CVS commit: [netbsd-9] src/usr.sbin/sysinst
Date: Thu, 5 Nov 2020 08:10:21 +0000

 Module Name:	src
 Committed By:	sborrill
 Date:		Thu Nov  5 08:10:21 UTC 2020

 Modified Files:
 	src/usr.sbin/sysinst [netbsd-9]: menus.mi msg.mi.de msg.mi.en msg.mi.es
 	    msg.mi.fr msg.mi.pl util.c

 Log Message:
 Pull up the following revisions(s) (requested by martin in ticket #1121):
 	usr.sbin/sysinst/menus.mi:	revision 1.22-1.23
 	usr.sbin/sysinst/msg.mi.de:	revision 1.25-1.26
 	usr.sbin/sysinst/msg.mi.en:	revision 1.33-1.34
 	usr.sbin/sysinst/msg.mi.pl:	revision 1.33-1.34
 	usr.sbin/sysinst/msg.mi.es:	revision 1.27-1.28
 	usr.sbin/sysinst/msg.mi.fr:	revision 1.32-1.33
 	usr.sbin/sysinst/util.c:	revision 1.49-1.52

 - When looking for available CD media, skip those that are already mounted.
 - When no medium with sets is found, show a new error message and return
   to the source selection menu.
 - Rearrange all source option menus to have the proper set suffix available
   (either .tgz or .tar.xz).
 - Relax an assertion, the first getvfsstat() call may overestimate the file
   systems visible to us. Fixes PR 55752
 - When we did not magically find any CD medium with sets, offer a manual
   override (so ISO images on USB sticks or Xen's xbd(4) work).


 To generate a diff of this commit:
 cvs rdiff -u -r1.19.2.1 -r1.19.2.2 src/usr.sbin/sysinst/menus.mi
 cvs rdiff -u -r1.13.2.8 -r1.13.2.9 src/usr.sbin/sysinst/msg.mi.de
 cvs rdiff -u -r1.19.2.9 -r1.19.2.10 src/usr.sbin/sysinst/msg.mi.en
 cvs rdiff -u -r1.14.2.8 -r1.14.2.9 src/usr.sbin/sysinst/msg.mi.es
 cvs rdiff -u -r1.17.2.9 -r1.17.2.10 src/usr.sbin/sysinst/msg.mi.fr
 cvs rdiff -u -r1.20.2.9 -r1.20.2.10 src/usr.sbin/sysinst/msg.mi.pl
 cvs rdiff -u -r1.29.2.7 -r1.29.2.8 src/usr.sbin/sysinst/util.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.