PR 55752: relax an assertion, the first getvfsstat() call may overestimate the file systems visible to us.